Increase padding again on top of benefits image as issue still there on safari only

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -678,7 +678,7 @@ fieldset {
     .benefits-image-container {
         max-width: 300px;
         max-height: 300px;
-        padding-top: 400px;  
+        padding-top: 500px;  
     
     }
 
